# stocks_that_swing

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  codex_review.md  decisions.md  pyproject.toml  universe.yaml
configs/: study_roster.yaml  study_roster_manifest.json
deploy/: deploy.sh  docker-compose.yml  provision.sh  rclone.conf.example
deploy/launchd/: com.sts.forward-eod.plist  com.sts.forward-fill.plist  com.sts.forward-monitor.plist  install.sh
docs/: FORWARD_OPS.md  HYPOTHESES.md  LESSONS.md  PLAN.md  PREREG_TEMPLATE.md  README.md  VISION.md
docs/preregs/: 2026-07-11_h1-trend-pullback.md  2026-07-12_h2-pead.md  2026-07-12_h3-regeometried-breakout.md  2026-07-12_h4-portfolio-combined.md  2026-07-12_h4-portfolio-h1.md  2026-07-12_h4-portfolio-h2.md  2026-07-12_h4-portfolio-h3.md  (+2 more)
scripts/: fetch_study_roster.py  forward_eod.py  forward_fill.py  forward_monitor.py  forward_sync.py  phase25_common.py  phase25_screen_features.py  phase25_summarize_candidates.py  phase25_sweep_signals.py  run_all_studies.py  run_h1_study.py  run_h2_study.py  run_h3_study.py  run_h4_study.py  run_h4b_study.py  run_phase25.py
src/sts/: backtest.py  (+10 more)
tests/: test_calendar.py  test_catalyst.py  test_eventsim.py  test_fetch.py  test_fetch_study_roster.py  test_h4_candidates.py  test_h4_gate.py  test_portfolio.py  test_portfolio_ranked.py  test_quality.py  test_risk.py  test_run_h1_study.py  test_signals.py  test_signals_trend_pullback.py  test_store.py  test_study_h1_events.py  test_study_store.py  test_tradelog.py  test_universe.py  test_weekly.py
(+53 files in other folders)
