[project]
name = "sts"
version = "0.1.0"
description = "Stocks That Swing - swing-trading (3-15 session) study and paper-trading engine"
requires-python = ">=3.12"
dependencies = [
    "yfinance>=0.2.50",
    "pandas>=2.2",
    "numpy>=1.26",
    "pyarrow>=16.0",
    "PyYAML>=6.0",
    "exchange-calendars>=4.5",
    "tenacity>=8.3",
    "lxml>=5.0",  # yfinance earnings_dates parsing (refresh_earnings)
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
